Implement partition groups Remove unused help pages Small improvements in interface

--- a/client/dev/partials/home.html
+++ b/client/dev/partials/home.html
@@ -1,5 +1,5 @@
-<div ng-switch="language">
 
+<div ng-switch="language">
 	<div ng-switch-when="en">
 		<h3>Welcome to Monitool!</h3>
 
@@ -64,7 +64,7 @@
 				<h4>First</h4>
 
 				<ul style= "margin-bottom: 10px">
-					<li>Read the <a ui-sref="main.help.presentation_general">user guide</a>.</li>
+					<li>Read the <a ui-sref="main.help.create">user guide</a>.</li>
 					<li>Decide what data you want to track on your project in "Collection forms".</li>
 					<li>Enter your logical frame and link your indicators to the forms</li>
 					<li>Make your first data entry and have a look at the generated reporting!</li>
@@ -143,7 +143,7 @@
 				<h4>Pour commencer</h4>
 				
 				<ul style="margin-bottom: 10px">
-					<li>Lisez le <a ui-sref="main.help.presentation_general">guide d'utilisation de l'outil</a>.</li>
+					<li>Lisez le <a ui-sref="main.help.create">guide d'utilisation de l'outil</a>.</li>
 					<li>Décidez des données que vous désirez suivre sur votre projet dans "Formulaires de collecte".</li>
 					<li>Saisissez votre cadre logique et liez vos indicateurs au données collectées précedement</li>
 					<li>Réalisez votre première saisie!</li>
@@ -216,7 +216,7 @@
 		<div class="col-xs-4">
 			<h4>Para empezar</h4>
 			<ul style="margin-bottom: 10px">
-				<li>Lea la <a ui-sref="main.help.presentation_general">Guía del usuario</a></li>
+				<li>Lea la <a ui-sref="main.help.create">Guía del usuario</a></li>
 				<li>Decida qué datos desea seguir en "Formularios de colecta".</li>
 				<li>Entre su marco lógico y vincule sus indicadores a los datos recogidos previamente</li>
 				<li>Haga su primera entrada!</li>
