--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -50,7 +50,7 @@
 				</li>
 
 				<li ng-class="{active: $state.includes('main.help')}">
-					<a ui-sref="main.help.presentation_general">
+					<a ui-sref="main.help.create">
 						<i class="fa fa-fw fa-question"></i>
 						<span translate="shared.user_guide"></span>
 					</a>
