--- a/client/dev/partials/projects/activity/collection-form-list.html
+++ b/client/dev/partials/projects/activity/collection-form-list.html
@@ -36,11 +36,12 @@
 	</tbody>
 	<tfoot acl-has-project-role="owner">
 		<tr>
-			<td colspan="8">
-				<button class="btn btn-default btn-xs"
-						style="width: 100%"
-						ui-sref="main.project.collection_form_edition({formId: 'new'})"
-						translate="shared.add"></button>
+			<td colspan="8" style="text-align: center">
+				<a class="btn btn-default btn-xs"
+				   ui-sref="main.project.collection_form_edition({formId: 'new'})">
+					<i class="fa fa-plus"></i>
+					<span translate="shared.add"></span>
+				</a>
 			</td>
 		</tr>
 	</tfoot>
