--- a/client/dev/partials/projects/specification/collection-site-list.html
+++ b/client/dev/partials/projects/specification/collection-site-list.html
@@ -58,8 +58,11 @@
 		</tbody>
 		<tfoot acl-has-project-role="owner">
 			<tr>
-				<td colspan="4">
-					<a class="btn btn-default btn-xs" ng-click="createEntity()" style="width: 100%" translate="shared.add"></a>
+				<td colspan="4" style="text-align: center">
+					<a class="btn btn-default btn-xs" ng-click="createEntity()">
+						<i class="fa fa-plus"></i>
+						<span translate="shared.add"></span>
+					</a>
 				</td>
 			</tr>
 		</tfoot>
@@ -117,8 +120,11 @@
 		</tbody>
 		<tfoot acl-has-project-role="owner">
 			<tr>
-				<td colspan="3">
-					<a class="btn btn-default btn-xs" ng-click="createGroup()" style="width: 100%" translate="shared.add"></a>
+				<td colspan="3" style="text-align: center">
+					<a class="btn btn-default btn-xs" ng-click="createGroup()">
+						<i class="fa fa-plus"></i>
+						<span translate="shared.add"></span>
+					</a>
 				</td>
 			</tr>
 		</tfoot>
