--- a/client/dev/partials/projects/specification/user-list.html
+++ b/client/dev/partials/projects/specification/user-list.html
@@ -37,8 +37,11 @@
 		</tbody>
 		<tfoot acl-has-project-role="owner">
 			<tr>
-				<td colspan="5">
-					<a class="btn btn-default btn-xs" ng-click="editUser()" style="width: 100%" translate="shared.add"></a>
+				<td colspan="5" style="text-align: center">
+					<a class="btn btn-default btn-xs" ng-click="editUser()">
+						<i class="fa fa-plus"></i>
+						<span translate="shared.add"></span>
+					</a>
 				</td>
 			</tr>
 		</tfoot>
