--- a/client/dev/partials/admin/theme-type-list.html
+++ b/client/dev/partials/admin/theme-type-list.html
@@ -11,12 +11,12 @@
 
 			<th style="width:80px" ng-if="entityType === 'theme'" translate="indicator.num_projects"></th>
 			<th style="width:80px" translate="indicator.num_indicators"></th>
-			<th style="width:225px" acl-has-role="indicator"></th>
+			<th style="width:225px"></th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr ng-repeat="(entityIndex, entity) in entities track by entity._id">
-			<td acl-has-role="indicator" acl-fallback="entity.name[code]" ng-repeat="(code, language) in languages">
+			<td ng-repeat="(code, language) in languages">
 				<ng-form name="entityForm">
 					<div class="form-group" show-errors style="margin: 0">
 						<div class="input-group">
@@ -41,23 +41,24 @@
 			</td>
 			<td ng-if="entityType === 'theme'">{{entity.__projectUsage || 0}}</td>
 			<td>{{entity.__indicatorUsage || 0}}</td>
-			<td acl-has-role="indicator">
+			<td>
 				<a class="btn btn-primary btn-xs" ng-click="save(entityIndex)" ng-disabled="!entity.name || !hasChanged(entityIndex)">
 					<i class="fa fa-floppy-o"></i>
-					<span translate>shared.save</span>
+					<span translate="shared.save"></span>
 				</a>
 				<a class="btn btn-danger btn-xs" ng-disabled="entity.__projectUsage || entity.__indicatorUsage" ng-click="remove(entityIndex)">
 					<i class="fa fa-remove"></i>
-					<span translate>shared.delete</span>
+					<span translate="shared.delete"></span>
 				</a>
 			</td>
 		</tr>
-		<tr acl-has-role="indicator">
+		<tr>
 			<!-- should be len(languages + 3) -->
-			<td colspan="{{entityType === 'theme' ? 6 : 5}}">
-				<div class="input-group input-group-sm" style="width: 100%">
-					<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate>shared.add</button>
-				</div>
+			<td colspan="{{entityType === 'theme' ? 6 : 5}}" style="text-align: center">
+				<a class="btn btn-default btn-xs" ng-click="create()">
+					<i class="fa fa-plus"></i>
+					<span translate="shared.add"></span>
+				</a>
 			</td>
 		</tr>
 	</tbody>
