--- a/client/dev/partials/projects/indicators/logframe-edit.html
+++ b/client/dev/partials/projects/indicators/logframe-edit.html
@@ -44,10 +44,11 @@
 			<label for="logframe-name-input" class="col-sm-2 control-label" translate="shared.name"></label>
 
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.logicalFrames[logicalFrameIndex].name">
-				<input class="form-control"
-					   name="nameDesc"
-					   id="logframe-name-input"
-					   ng-model="project.logicalFrames[logicalFrameIndex].name"></textarea>
+				<textarea auto-resize
+						  class="form-control"
+						  name="nameDesc"
+						  id="logframe-name-input"
+						  ng-model="project.logicalFrames[logicalFrameIndex].name"></textarea>
 			</div>
 		</div>
 
@@ -55,7 +56,8 @@
 			<label for="logframe-goal-input" class="col-sm-2 control-label" translate="project.goal"></label>
 
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.logicalFrames[logicalFrameIndex].goal">
-				<textarea class="form-control"
+				<textarea auto-resize
+						  class="form-control"
 						  name="goalDesc"
 						  id="logframe-goal-input"
 						  placeholder="{{'project.intervention_logic_goal_ph'|translate}}"
@@ -121,7 +123,7 @@
 					<div class="form-group" show-errors>
 						<label for="purpose-desc-{{purposeId}}-input" class="col-sm-2 control-label" translate="project.purpose"></label>
 						<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="purpose.description">
-							<textarea class="form-control"
+							<textarea auto-resize class="form-control"
 									  name="description"
 									  id="purpose-desc-{{purposeId}}-input"
 									  placeholder="{{'project.intervention_logic_purpose_ph'|translate}}"
@@ -132,7 +134,7 @@
 					<div class="form-group" show-errors>
 						<label for="purpose-assum-{{purposeId}}-input" class="col-sm-2 control-label" translate="project.assumptions"></label>
 						<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="purpose.assumptions">
-							<textarea class="form-control"
+							<textarea auto-resize class="form-control"
 									  name="assumptions"
 									  id="purpose-assum-{{purposeId}}-input"
 									  placeholder="{{'project.assumptions_purpose_ph'|translate}}"
@@ -193,7 +195,7 @@
 								<div class="form-group" show-errors>
 									<label for="output-desc-{{purposeId}}-{{outputId}}-input" class="col-sm-2 control-label" translate="project.output"></label>
 									<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="output.description">
-										<textarea class="form-control"
+										<textarea auto-resize class="form-control"
 												  id="output-desc-{{purposeId}}-{{outputId}}-input"
 												  name="description"
 												  placeholder="{{'project.output_desc_ph'|translate}}"
@@ -204,7 +206,7 @@
 								<div class="form-group" show-errors>
 									<label for="output-assump-{{purposeId}}-{{outputId}}-input" class="col-sm-2 control-label" translate="project.assumptions"></label>
 									<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="output.assumptions">
-										<textarea class="form-control"
+										<textarea auto-resize class="form-control"
 												  id="output-assump-{{purposeId}}-{{outputId}}-input"
 												  name="assumptions"
 												  placeholder="{{'project.output_assumptions_ph'|translate}}"
