Feature: Do not return to indicator list when saving an indicator. It is not consistent with the rest of the application. Feature: Do not display partition groups by default, to make GUI lighter. Feature: Improve data source display
Fix: $q.resolve is not defined for this version of Angular. Use $q.when instead.
Fix: It was not possible to delete partitions.
Fix: When removing a partition element, it was not automatically removed from all partition groups.
Fix: Unable to link an indicator to the catalog (missing .$promise on $resource call).
Fix: Implement Indicator.prototype.reset(), which prevented from creating new indicators.
Fix: Missing require in client/models/project.js prevented from creating new entities.
Fix: Invert inputs in indicator edition, so that they make more sense (baseline -> target -> colors).
Fix: Move logical frame save button out of the logframe form element, so that it's possible to remove all logframes, then save.
Fix: Changes on partitions were not applied to previous inputs.

--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -131,12 +131,20 @@
 
 					<ul>
 						<li ng-repeat="partition in element.partitions" style="margin-bottom: 2px">
-							<a class="btn btn-xxs btn-default pull-right" ng-click="moreOptions(element, partition)" tooltip="Modifier">
+							<a class="btn btn-xxs btn-default pull-right" ng-click="moreOptions(element, partition)">
 								<i class="fa fa-fw fa-pencil"></i>
 								<span translate="shared.edit"></span>
 							</a>
 
-							<strong>{{partition.name}}</strong>: {{partition.elements|pluck:'name'|join:' / '}}
+							<strong>{{partition.name}}</strong>
+							
+							<span ng-repeat="group in partition.groups">
+								<span class="label label-info"><i class="fa fa-arrow-circle-right"></i> {{group.name}}</span>
+							</span>
+							
+							<span ng-repeat="element in partition.elements">
+								<span class="label label-default">{{element.name}}</span>
+							</span>
 						</li>
 					</ul>
 
