--- a/client/dev/partials/projects/activity/partition-modal.html
+++ b/client/dev/partials/projects/activity/partition-modal.html
@@ -5,16 +5,16 @@
 		<legend translate="project.partition_general"></legend>
 
 		<div class="form-group">
-			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
+			<label for="input-partition-name" class="col-sm-2 control-label" translate="shared.name"></label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" name="name" ng-model="partition.name" placeholder="{{'project.partition_general_placeholder'|translate}}" required />
+				<input id="input-partition-name" type="text" class="form-control" name="name" ng-model="partition.name" placeholder="{{'project.partition_general_placeholder'|translate}}" required />
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label for="input-name" class="col-sm-2 control-label" translate="project.aggregation"></label>
+			<label for="input-partition-aggregation" class="col-sm-2 control-label" translate="project.aggregation"></label>
 			<div class="col-sm-10">
-				<select ng-model="partition.aggregation" class="form-control">
+				<select id="input-partition-aggregation" ng-model="partition.aggregation" class="form-control">
 					<option value="none" translate="project.none"></option>
 					<option value="sum" translate="project.sum"></option>
 					<option value="average" translate="project.average"></option>
@@ -25,6 +25,13 @@
 			</div>
 		</div>
 
+		<div class="form-group">
+			<label for="input-partition-use-groups" class="col-sm-2 control-label" translate="project.groups"></label>
+			<div class="col-sm-10">
+				<input id="input-partition-use-groups" type="checkbox" name="groups" ng-model="useGroups" />
+			</div>
+		</div>
+		
 		<legend translate="project.partition_elements"></legend>
 
 		<table class="table table-bordered table-stripped table-condensed">
@@ -53,10 +60,10 @@
 					</td>
 
 					<td style="text-align: right">
-						<a class="btn btn-default btn-sm" ng-click="up($index, partition.elements)" ng-if="!$first" tooltip="{{'shared.up'|translate}}">
+						<a class="btn btn-default btn-sm" ng-click="move($index, partition.elements, -1)" ng-if="!$first" tooltip="{{'shared.up'|translate}}">
 							<i class="fa fa-caret-square-o-up"></i>
 						</a>
-						<a class="btn btn-default btn-sm" ng-click="down($index, partition.elements)" ng-if="!$last" tooltip="{{'shared.down'|translate}}">
+						<a class="btn btn-default btn-sm" ng-click="move($index, partition.elements, 1)" ng-if="!$last" tooltip="{{'shared.down'|translate}}">
 							<i class="fa fa-caret-square-o-down"></i>
 						</a>
 						<a class="btn btn-danger btn-sm" ng-click="deletePartitionElement(partitionElement.id)" tooltip="{{'shared.delete'|translate}}">
@@ -77,9 +84,9 @@
 			</tfoot>
 		</table>
 
-		<legend translate="project.partition_groups"></legend>
+		<legend translate="project.partition_groups" ng-if="useGroups"></legend>
 
-		<table class="table table-bordered table-stripped table-condensed">
+		<table class="table table-bordered table-stripped table-condensed" ng-if="useGroups">
 			<thead>
 				<tr>
 					<th style="width:300px" translate="project.partition_group_name"></th>
@@ -115,10 +122,10 @@
 					</td>
 
 					<td style="text-align: right">
-						<a class="btn btn-default btn-sm" ng-click="up($index, partition.groups)" ng-if="!$first" tooltip="{{'shared.up'|translate}}">
+						<a class="btn btn-default btn-sm" ng-click="move($index, partition.groups, -1)" ng-if="!$first" tooltip="{{'shared.up'|translate}}">
 							<i class="fa fa-caret-square-o-up"></i>
 						</a>
-						<a class="btn btn-default btn-sm" ng-click="down($index, partition.groups)" ng-if="!$last" tooltip="{{'shared.down'|translate}}">
+						<a class="btn btn-default btn-sm" ng-click="move($index, partition.groups, 1)" ng-if="!$last" tooltip="{{'shared.down'|translate}}">
 							<i class="fa fa-caret-square-o-down"></i>
 						</a>
 						<a class="btn btn-danger btn-sm" ng-click="deleteGroup(partitionGroup.id)" tooltip="{{'shared.delete'|translate}}">
@@ -138,22 +145,22 @@
 				</tr>
 			</tfoot>
 		</table>
-
 	</form>
 </div>
 
 <div class="modal-footer">
-	<div>
-		<br/>
+	<a ng-disabled="partitionForm.$invalid || isUnchanged()" class="btn btn-primary" ng-click="save()">
+		<i class="fa fa-table"></i>
+		<span translate="shared.apply"></span>
+	</a>
 
-		<a ng-disabled="partitionForm.$invalid || isUnchanged()" class="btn btn-primary" ng-click="save()">
-			<i class="fa fa-table"></i>
-			<span translate="shared.apply"></span>
-		</a>
+	<a ng-click="reset()" ng-disabled="isUnchanged()" class="btn btn-default">
+		<i class="fa fa-undo"></i>
+		<span translate="shared.remove_changes"></span>
+	</a>
 
-		<a ng-click="reset()" ng-disabled="isUnchanged()" class="btn btn-default">
-			<i class="fa fa-undo"></i>
-			<span translate="shared.remove_changes"></span>
-		</a>
-	</div>
+	<a ng-click="delete()" ng-if="!isNew" class="btn btn-danger">
+		<i class="fa fa-times"></i>
+		<span translate="shared.delete"></span>
+	</a>
 </div>
