Fix: Help link did not work on partner mode. Fix: Breadcrumbs in help pages.

--- a/client/dev/partials/help/09-create-new-indicator.html
+++ b/client/dev/partials/help/09-create-new-indicator.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li class="active" translate="shared.help"></li>
-	<li class="active" translate="help.block.general"></li>
+	<li class="active" translate="help.block.indicators"></li>
 	<li class="active" translate="help.page.create_new_indicator"></li>
 </ol>
 
