--- a/client/dev/partials/help/03-input.html
+++ b/client/dev/partials/help/03-input.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li class="active" translate="shared.help"></li>
-	<li class="active" translate="help.block.general"></li>
+	<li class="active" translate="help.block.project"></li>
 	<li class="active" translate="help.page.input"></li>
 </ol>
 
